...
                        viewModel.updateSearchQuery(query)
                    },
                    placeholder = { Text("Find movies to rate them...") },
                    modifier = Modifier
                        .weight(1f)
                        .testTag(
                            "searchinput"
                        ),
                    leadingIcon = { Icon(Icons.Default.Search, contentDescription = "Search") },
                    singleLine = true
                )

                if (searchText.isNotEmpty()) {
...
